WIP on first real commit

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,13 @@
 
 <body>
 
-    {% include header.html %} {{ content }} {% include footer.html %}
+    {% include header.html %}
+    <div id="main">
+      <div class="inner">
+        {{ content }}
+      </div>
+    </div>
+    {% include footer.html %}
 
 </body>
 
