--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -36,3 +36,77 @@
 			}
 
 	}
+
+
+.hidden {
+  display: none !important;
+}
+
+.calendar-date {
+  font-family: "Open Sans", sans-serif;
+  padding: 1em;
+  padding-left: 0;
+}
+
+.calendar-date-day {
+  display: block;
+  font: {
+    size: 2.5em;
+    weight: bold;
+  }
+  letter-spacing: -.05em;
+  line-height: 1em;
+  text-align: center;
+}
+
+.calendar-date-month,
+.calendar-date-year {
+  display: block;
+  font-size: 0.7em;
+  line-height: 1em;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.calendar-location-and-time {
+  display: block;
+  font: {
+    family: "Open Sans", sans-serif;
+    size: 0.6em;
+  }
+  line-height: 2em;
+  opacity: .7;
+  text-transform: uppercase;
+}
+
+.calendar-season {
+  display: none;
+}
+
+.calendar-season-title {
+  cursor: pointer;
+}
+
+.calendar-season-title-arrow {
+  font-size: .7em;
+}
+
+.calendar-page {
+  @media only screen and (min-width: 900px) {
+    .container .mid-col:after {
+      background: {
+        image: url(/assets/calendar-background.jpg);
+        position: top center;
+        repeat: no-repeat;
+        size: cover;
+      }
+      content: "";
+      display: block;
+      height: 100%;
+      position: fixed;
+      right: 0;
+      top: 0;
+      width: 25.2%; /* 72% width column * 35% of the column's free space (since this is position: fixed) */
+    }
+  }
+}
