--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -32,9 +32,9 @@
 			'color #{_duration(transition)} ease-in-out',
 			'border-bottom-color #{_duration(transition)} ease-in-out'
 		));
-		border-bottom: dotted 1px;
-		color: inherit;
+		color: #ADD8E6;
 		text-decoration: none;
+    //font-weight: bold;
 
 		&:hover {
 			border-bottom-color: transparent;
