--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,8 +18,8 @@
 		        <li><a href="{{ "" | absolute_url }}/">{{ page.title }}</a></li>
 	    	{% endif %}
 		{% endfor %}
-		{% for page in site.pages %}
-		    {% if page.layout != "home" and page.nav-menu == true %}
+		{% for page in sorted_pages %}
+		    {% if page.layout != "home" and page.nav-menu == true and page.tileable  %}
 		        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
 		    {% endif %}
 		{% endfor %}
