--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,9 @@
 	<link rel="stylesheet" href="{{ "assets/css/main.css" | relative_url }}" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="{{ "assets/css/ie9.css" | relative_url }}" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="{{ "assets/css/ie8.css" | relative_url }}" /><![endif]-->
+  <meta property="og:url"                content="{{ site.url }}{{ page.url }}" />
+  <meta property="og:type"               content="{{ page.content_type }}" />
+  <meta property="og:title"              content="{{ page.og_title }}" />
+  <meta property="og:description"        content="{{ page.og_description }}" />
+  <meta property="og:image"              content="{{ site.url }}{{ page.og_image }}" />
 </head>
