--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -110,3 +110,11 @@
     }
   }
 }
+
+summary {
+		color: _palette(fg-bold);
+		font-weight: _font(weight-bold);
+		line-height: 1.65;
+		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		font-size: 1.75em;
+}
